# Lingu-Nvidia-Contest

./: README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
chatbot/: nvidia.py  urls.py  views.py
chatbot/templates/chatbot/: chat.html  money_manager.html
mychatbot/: settings.py  urls.py
static/css/: custom.css  tailwind-built.css
